# dispute

./: .gitignore  Anchor.toml  package.json
programs/dispute/: Cargo.toml
programs/dispute/src/: errors.rs  lib.rs
programs/dispute/src/accessors/: dispute_accessors.rs  dispute_general.rs  mod.rs
programs/dispute/src/accessors/types/: mod.rs  physical_dispute.rs  physical_transaction.rs
programs/dispute/src/structs/: dispute_struct.rs  dispute_trait.rs  mod.rs
tests/: dispute.ts
