[package]
name = "dispute"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "dispute"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
transaction = {git = "https://github.com/bruh-capital/transaction"}
orbit-physical-market = {git = "https://github.com/bruh-capital/physical"}
