[package]
name = "orbit-dispute"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "orbit-dispute"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
transaction = {git = "https://github.com/OrbitEng/transaction"}
market-accounts = {git = "https://github.com/OrbitEng/accounts", features=["no-entrypoint"]}
orbit-addresses = {git = "https://github.com/OrbitEng/addresses"}
